[gd_scene load_steps=23 format=3 uid="uid://c5h33u2gfmlcu"]

[ext_resource type="Script" uid="uid://6usbr220nxx6" path="res://SceneRecognition/recognition.gd" id="1_rn62g"]
[ext_resource type="PackedScene" uid="uid://botlqcpy5y61v" path="res://Robot/robot.tscn" id="2_pt5ji"]
[ext_resource type="Script" uid="uid://eps6uwmygjly" path="res://SceneRecognition/cameras.gd" id="3_0b1wu"]
[ext_resource type="PackedScene" uid="uid://haywivn3kl27" path="res://Display/large_display.tscn" id="4_4j28a"]
[ext_resource type="Texture2D" uid="uid://bpqsqwhwvj3q7" path="res://Garden/Garden_Ground_Concrete033_1K_Color.jpg" id="5_b5i1u"]
[ext_resource type="Texture2D" uid="uid://br53qalfvv2wg" path="res://Garden/Garden_Ground_Concrete033_1K_NormalGL.jpg" id="6_ypjd4"]
[ext_resource type="Texture2D" uid="uid://bmg7ies2gd1fa" path="res://Garden/Garden_Ground_Concrete033_1K_Roughness.png" id="7_7g2ra"]
[ext_resource type="PackedScene" uid="uid://cvp2qgso64ghr" path="res://Garden/Garden_Trees.glb" id="8_kcsvi"]
[ext_resource type="PackedScene" uid="uid://cyiusm55u2luo" path="res://Garden/Garden_Wall.glb" id="9_pm3eh"]
[ext_resource type="Script" uid="uid://iu4k7nucaphp" path="res://SceneRecognition/ui.gd" id="10_g4b7p"]
[ext_resource type="Texture2D" uid="uid://diu1ss6k5nvff" path="res://Icons/ArrowRightButton.png" id="11_i7pne"]
[ext_resource type="Texture2D" uid="uid://yabsflhhu1iq" path="res://Icons/ArrowLeftButton.png" id="12_ogefa"]
[ext_resource type="Texture2D" uid="uid://drrqxgqua1gqf" path="res://Icons/ChatToggleButton.png" id="13_equvi"]
[ext_resource type="AudioStream" uid="uid://chbrg5sgv8vgs" path="res://Audio/Bach,_BWV_147,_10._Jesus_bleibet_meine_Freude.ogg" id="14_abia7"]

[sub_resource type="Gradient" id="Gradient_efxa6"]
offsets = PackedFloat32Array(0.265385, 0.826923)
colors = PackedColorArray(0.126683, 0.671699, 0.950094, 1, 0.847474, 0.847474, 0.847474, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_dg77c"]
noise_type = 0
seed = 5

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rn62g"]
width = 1024
height = 1024
seamless = true
color_ramp = SubResource("Gradient_efxa6")
noise = SubResource("FastNoiseLite_dg77c")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_w48qg"]
sky_cover = SubResource("NoiseTexture2D_rn62g")

[sub_resource type="Sky" id="Sky_pt5ji"]
sky_material = SubResource("ProceduralSkyMaterial_w48qg")

[sub_resource type="Environment" id="Environment_qftih"]
background_mode = 2
sky = SubResource("Sky_pt5ji")
ambient_light_source = 3
ambient_light_color = Color(0.197937, 0.197937, 0.197937, 1)
ssao_enabled = true
ssao_intensity = 2.8
fog_mode = 1
fog_density = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hcqge"]
albedo_texture = ExtResource("5_b5i1u")
roughness_texture = ExtResource("7_7g2ra")
normal_enabled = true
normal_texture = ExtResource("6_ypjd4")
uv1_scale = Vector3(10000, 10000, 10000)

[sub_resource type="PlaneMesh" id="PlaneMesh_fcfh8"]

[node name="Scene" type="Node3D"]
script = ExtResource("1_rn62g")

[node name="SubViewportContainer_Robot" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport_Robot" type="SubViewport" parent="SubViewportContainer_Robot"]
handle_input_locally = false
msaa_3d = 1
size = Vector2i(960, 540)
render_target_update_mode = 4

[node name="Robot" parent="SubViewportContainer_Robot/SubViewport_Robot" instance=ExtResource("2_pt5ji")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.515031, 0.548746, -0.658499, -0.597257, 0.3213, 0.734881, 0.614839, 0.77178, 0.162263, 0, 2.13069, 0)
light_color = Color(0.89059, 0.89059, 0.89059, 1)
light_energy = 3.0
shadow_enabled = true
shadow_opacity = 0.72

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
msaa_3d = 1
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Cameras" type="Node3D" parent="SubViewportContainer/SubViewport"]
script = ExtResource("3_0b1wu")

[node name="Camera1" type="Camera3D" parent="SubViewportContainer/SubViewport/Cameras"]
transform = Transform3D(0.987554, 0, 0.157279, 0, 1, 0, -0.157279, 0, 0.987554, 1.04068, 1.28255, 2.41048)
fov = 25.0

[node name="Camera2" type="Camera3D" parent="SubViewportContainer/SubViewport/Cameras"]
transform = Transform3D(-0.883005, 0, -0.469364, 0, 1, 0, 0.469364, 0, -0.883005, -0.261207, 1.59908, -0.471232)
fov = 40.0

[node name="Camera3" type="Camera3D" parent="SubViewportContainer/SubViewport/Cameras"]
transform = Transform3D(-0.889413, 0.147422, -0.43268, 0.0608215, 0.976316, 0.207624, 0.45304, 0.158347, -0.877315, -2.17964, 2.16709, -4.06887)
fov = 30.0

[node name="Camera4" type="Camera3D" parent="SubViewportContainer/SubViewport/Cameras"]
transform = Transform3D(0.263469, 0, 0.964668, 0, 1, 0, -0.964668, 0, 0.263469, 6.40412, 1.70589, -0.96006)
fov = 36.0

[node name="Camera5" type="Camera3D" parent="SubViewportContainer/SubViewport/Cameras"]
transform = Transform3D(1, 0, 0, 0, 1, -1.49012e-08, 0, 1.49012e-08, 1, 0, 1.45624, -0.470071)
fov = 45.0

[node name="Camera6" type="Camera3D" parent="SubViewportContainer/SubViewport/Cameras"]
transform = Transform3D(1, 0, 0, 0, 0.845588, -0.533836, 0, 0.533836, 0.845588, -2.86008, 0.226557, -4.79819)
fov = 40.0

[node name="Camera7" type="Camera3D" parent="SubViewportContainer/SubViewport/Cameras"]
transform = Transform3D(-0.717105, 0, 0.696965, 0, 1, 0, -0.696965, 0, -0.717105, 7.69446, 1.26421, -11.8125)
fov = 36.0

[node name="LargeDisplay" parent="." instance=ExtResource("4_4j28a")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qftih")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(13685.2, 0, 0, 0, 4589.3, 0, 0, 0, 10000, 0, -0.0362293, 0)
material_override = SubResource("StandardMaterial3D_hcqge")
mesh = SubResource("PlaneMesh_fcfh8")

[node name="Garden" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.085)

[node name="Garden_Trees" parent="Garden" instance=ExtResource("8_kcsvi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.173895)

[node name="Garden_Trees2" parent="Garden" instance=ExtResource("8_kcsvi")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -6.308e-07, 0, -0.215515)

[node name="Garden_Wall" parent="Garden" instance=ExtResource("9_pm3eh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.205)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("10_g4b7p")

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureButtonNextContent" type="TextureButton" parent="UI/Control"]
layout_mode = 0
offset_left = 1800.0
offset_top = 88.0
offset_right = 1896.0
offset_bottom = 184.0
texture_normal = ExtResource("11_i7pne")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButtonPrevContent2" type="TextureButton" parent="UI/Control"]
layout_mode = 0
offset_left = 1688.0
offset_top = 88.0
offset_right = 1784.0
offset_bottom = 184.0
texture_normal = ExtResource("12_ogefa")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 1688.0
offset_top = 32.0
offset_right = 1896.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 36
text = "Content"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButtonNextCamera" type="TextureButton" parent="UI/Control"]
layout_mode = 0
offset_left = 1800.0
offset_top = 248.0
offset_right = 1896.0
offset_bottom = 344.0
texture_normal = ExtResource("11_i7pne")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButtonPrevCamera" type="TextureButton" parent="UI/Control"]
layout_mode = 0
offset_left = 1688.0
offset_top = 248.0
offset_right = 1784.0
offset_bottom = 344.0
texture_normal = ExtResource("12_ogefa")
ignore_texture_size = true
stretch_mode = 0

[node name="Label2" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 1688.0
offset_top = 192.0
offset_right = 1896.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 36
text = "Camera"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButtonStartChat" type="TextureButton" parent="UI/Control"]
layout_mode = 0
offset_left = 704.0
offset_top = 1056.0
offset_right = 1216.0
offset_bottom = 1080.0
texture_normal = ExtResource("13_equvi")
ignore_texture_size = true
stretch_mode = 0

[node name="ChatWindow" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextInput" type="TextEdit" parent="UI/ChatWindow"]
layout_mode = 0
offset_left = 384.0
offset_top = 968.0
offset_right = 1536.0
offset_bottom = 1048.0
theme_override_font_sizes/font_size = 24
placeholder_text = "Ask anything..."
wrap_mode = 1

[node name="TextOutput" type="TextEdit" parent="UI/ChatWindow"]
layout_mode = 0
offset_left = 384.0
offset_top = 712.0
offset_right = 1536.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 24
wrap_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_abia7")
volume_db = -25.0
autoplay = true
parameters/looping = false

[connection signal="button_down" from="UI/Control/TextureButtonNextContent" to="." method="next_image"]
[connection signal="button_down" from="UI/Control/TextureButtonPrevContent2" to="." method="prev_image"]
[connection signal="button_down" from="UI/Control/TextureButtonNextCamera" to="SubViewportContainer/SubViewport/Cameras" method="next_camera"]
[connection signal="button_down" from="UI/Control/TextureButtonPrevCamera" to="SubViewportContainer/SubViewport/Cameras" method="prev_camera"]
[connection signal="button_down" from="UI/Control/TextureButtonStartChat" to="UI" method="_on_chat_toggle_button_button_down"]
